--- a/index.html
+++ b/index.html
@@ -7,5 +7,13 @@
     <script src="memory.js" charset="utf-8"></script>
 </head>
 <body>
+
+<h3>Penguins:<span id="result"></h3>
+
+<div class="grid">
+
+
+</div>
+
 </body>
 </html>
