program functioning, will re-factor

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang ="en" dir="ltr">
 <head>
     <meta charset="UTF-8">
-    <Title>Find the Penguin</Title>
+    <title>Find the Penguin</title>
     <link rel="stylesheet" href="style.css"></link>
     <script src="memory.js" charset="utf-8"></script>
 </head>
@@ -11,8 +11,6 @@
 <h3>Penguins:<span id="result"></h3>
 
 <div class="grid">
-
-
 </div>
 
 </body>
