--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 
-<h3>Penguins: <span id="result"></h3>
+<h3>Pretty Penguins Picked: <span id="result"></h3>
 
 <div class="grid">
 </div>
